--- a/weirdass.html
+++ b/weirdass.html
@@ -46,5 +46,5 @@
   <img src="http://68.media.tumblr.com/3f6f6345dbf3eb98f2d963ec8ce044c0/tumblr_nz2kgdzqAi1sf4g9bo7_1280.jpg"/>
   <img src="https://68.media.tumblr.com/56629bce49dcd1122b46bbdb105eacd2/tumblr_nh3d5gpFK11tnpeomo1_1280.jpg"/>
   
-</body> 
+</body> y
 </html>
